# codeyourpcb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESKTOP-SETUP.md  LICENSE-APACHE  LICENSE-MIT  README.md  build-linux.sh  build-macos.sh  build-windows.bat  dev-macos.sh  dev-windows.bat  setup-linux.sh  setup-macos.sh  setup-windows.bat
.github/workflows/: deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  brainstorm.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/debug/: parser-current-syntax.md
.planning/debug/resolved/: drc-wasm-no-violations.md  viewer-traces-not-rendering.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-01-project-setup-PLAN.md  01-02-SUMMARY.md  01-02-core-types-PLAN.md  01-03-SUMMARY.md  01-03-grammar-PLAN.md  01-04-SUMMARY.md  01-04-ecs-components-PLAN.md  01-05-SUMMARY.md  01-05-ast-parser-PLAN.md  01-06-SUMMARY.md  01-06-board-world-PLAN.md  01-07-SUMMARY.md  01-07-footprints-PLAN.md  01-08-SUMMARY.md  01-08-ast-sync-PLAN.md  01-09-cli-PLAN.md  01-09-cli-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-rendering/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-PLAN.md  02-08-SUMMARY.md  02-09-PLAN.md  02-09-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-validation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-export/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES-v1.1.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cypcb-calc/: Cargo.toml
crates/cypcb-cli/: Cargo.toml
crates/cypcb-cli/src/: main.rs
crates/cypcb-cli/src/commands/: check.rs  export.rs  mod.rs  parse.rs  route.rs
crates/cypcb-cli/tests/: cli_integration.rs
crates/cypcb-core/: Cargo.toml
crates/cypcb-drc/: Cargo.toml
crates/cypcb-drc/src/: lib.rs  violation.rs
crates/cypcb-drc/src/presets/: jlcpcb.rs  mod.rs  pcbway.rs
crates/cypcb-drc/src/rules/: clearance.rs  connectivity.rs  drill_size.rs  mod.rs  trace_width.rs
crates/cypcb-export/: Cargo.toml
crates/cypcb-export/src/: apertures.rs  coords.rs  job.rs  lib.rs  presets.rs
crates/cypcb-export/src/bom/: csv.rs  json.rs  mod.rs
crates/cypcb-export/src/cpl/: csv.rs  mod.rs
crates/cypcb-export/src/excellon/: mod.rs  tools.rs  writer.rs
crates/cypcb-export/src/gerber/: copper.rs  header.rs  mask.rs  mod.rs  outline.rs  silk.rs
crates/cypcb-kicad/: Cargo.toml
crates/cypcb-kicad/src/: footprint.rs  lib.rs  library.rs
crates/cypcb-library/: Cargo.toml
crates/cypcb-library/src/: error.rs  lib.rs  manager.rs  metadata.rs  models.rs  preview.rs  schema.rs  search.rs
crates/cypcb-library/src/sources/: custom.rs  jlcpcb.rs  kicad.rs  mod.rs
crates/cypcb-lsp/: Cargo.toml
crates/cypcb-lsp/src/: backend.rs  completion.rs  diagnostics.rs  document.rs  goto.rs  hover.rs  lib.rs  main.rs
crates/cypcb-parser/: Cargo.toml  build.rs
crates/cypcb-parser/grammar/: grammar.js  package.json  tree-sitter.json
crates/cypcb-parser/grammar/queries/: highlights.scm
crates/cypcb-parser/src/: ast.rs  errors.rs  lib.rs  parser.rs
crates/cypcb-platform/: Cargo.toml  build.rs
crates/cypcb-platform/src/: dialog.rs  error.rs  fs.rs  fs_native.rs  fs_web.rs  lib.rs  menu.rs  platform.rs  storage.rs  storage_native.rs  storage_web.rs
crates/cypcb-render/: Cargo.toml
crates/cypcb-render/src/: lib.rs  snapshot.rs
crates/cypcb-router/: Cargo.toml
crates/cypcb-router/src/: dsn.rs  freerouting.rs  lib.rs  ses.rs  types.rs
crates/cypcb-router/tests/: dsn_integration.rs
crates/cypcb-watcher/: Cargo.toml
crates/cypcb-world/: Cargo.toml
crates/cypcb-world/src/: lib.rs  registry.rs  spatial.rs  sync.rs  world.rs
crates/cypcb-world/src/components/: board.rs  electrical.rs  metadata.rs  mod.rs  physical.rs  position.rs  trace.rs  zone.rs
crates/cypcb-world/src/footprint/: gullwing.rs  library.rs  mod.rs  smd.rs  tht.rs
docs/: SYNTAX.md  architecture.md
docs/api/: library-format.md  lsp-server.md
docs/user-guide/: examples.md  getting-started.md  library-management.md  platform-differences.md  project-structure.md
examples/: blink.cypcb  blink.dsn  blink.routes  blink.ses  drc-test.cypcb  invalid.cypcb  power-indicator.cypcb  routing-test.cypcb  routing-test.dsn  routing-test.routes  routing-test.ses  simple-psu.cypcb  simple-psu.dsn  simple-psu.routes  simple-psu.ses  syntax.cypcb  uat-routing-locked.cypcb  uat-routing-test.cypcb  unknown_keyword.cypcb
output/assembly/: blink-BOM.csv  blink-CPL.csv  blink.json
output/drill/: blink-PTH.drl
output/gerber/: blink-B_Cu.gbr  blink-B_Mask.gbr  blink-B_Paste.gbr  blink-B_SilkS.gbr  blink-Edge_Cuts.gbr  blink-F_Cu.gbr  blink-F_Mask.gbr  blink-F_Paste.gbr  blink-F_SilkS.gbr
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
viewer/: .gitignore  build-wasm.sh  index.html  package-lock.json  package.json  server.ts  start.sh  test-wasm-drc.mjs  test-wasm-integration.mjs  test-wasm.mjs  vite.config.ts
viewer/public/: _headers
viewer/src/: desktop.ts  file-access.ts  file-picker.ts  interaction.ts  layers.ts  main.ts  renderer.ts  types.ts  url-state.ts  viewport.ts  wasm.ts
(+131 files in other folders)
