[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codeyourpcb/codeyourpcb"

[workspace.dependencies]
# Core libraries
tree-sitter = "0.25"
# Note: multi_threaded feature disabled for WASM compatibility
bevy_ecs = { version = "0.15", default-features = false }
rstar = "0.12"
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy", "derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Observability
tracing = "0.1"

# Internal crates
cypcb-core = { path = "crates/cypcb-core" }
cypcb-parser = { path = "crates/cypcb-parser", default-features = false }
cypcb-world = { path = "crates/cypcb-world", default-features = false }
cypcb-drc = { path = "crates/cypcb-drc" }
