[package]
name = "cypcb-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cypcb_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cypcb-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { workspace = true }
serde_json = { workspace = true }
cypcb-platform = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
