[package]
name = "cypcb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for CodeYourPCB"

[[bin]]
name = "cypcb"
path = "src/main.rs"

[dependencies]
cypcb-core = { path = "../cypcb-core" }
cypcb-parser = { path = "../cypcb-parser" }
# Note: cypcb-world dependency temporarily removed due to cargo resolver issues
# with feature unification in the complex bevy_ecs/miette/serde dependency graph.
# The CLI currently only uses parser-level validation.
# cypcb-world = { path = "../cypcb-world" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
