[package]
name = "cypcb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for CodeYourPCB"

[[bin]]
name = "cypcb"
path = "src/main.rs"

[dependencies]
cypcb-core = { path = "../cypcb-core" }
cypcb-parser = { path = "../cypcb-parser" }
cypcb-world = { path = "../cypcb-world" }
cypcb-router = { path = "../cypcb-router" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
