[package]
name = "cypcb-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for CodeYourPCB"

[[bin]]
name = "cypcb-lsp"
path = "src/main.rs"

[features]
# Server feature requires async runtime - disabled by default due to
# build environment issues with proc-macro loading
default = []
server = ["dep:async-trait", "dep:tower-lsp", "dep:tokio", "dep:dashmap", "dep:serde_json"]

[dependencies]
# Internal crates - always available for diagnostics/hover modules
cypcb-core = { path = "../cypcb-core" }
cypcb-parser = { path = "../cypcb-parser", features = ["tree-sitter-parser"] }
cypcb-world = { path = "../cypcb-world", features = ["sync"] }
cypcb-drc = { path = "../cypcb-drc" }

# External dependencies - always needed
miette.workspace = true
tracing.workspace = true

# Server-only dependencies (optional)
tower-lsp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }
dashmap = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
