[package]
name = "cypcb-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar and parser for CodeYourPCB DSL"

[dependencies]
cypcb-core = { workspace = true }
tree-sitter = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cc = "1.0"
