[package]
name = "cypcb-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar and parser for CodeYourPCB DSL"

[features]
default = ["tree-sitter-parser"]
# Enable tree-sitter parsing (requires C compiler, not WASM compatible)
tree-sitter-parser = ["dep:tree-sitter", "dep:cc"]

[dependencies]
cypcb-core = { workspace = true }
tree-sitter = { workspace = true, optional = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cc = { version = "1.0", optional = true }
