[package]
name = "cypcb-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared dependencies
cfg-if = "1"
async-trait = "0.1"
thiserror.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "File", "FileSystemFileHandle", "FileSystemWritableFileStream", "Blob"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
rfd = { version = "0.15", default-features = false }

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["fs", "rt"] }
rfd = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal"], optional = true }

[build-dependencies]
cfg_aliases = "0.2"

[features]
default = []
desktop = ["rfd"]
web = []
# For builds with native file dialog support (requires system dependencies on Linux)
native-dialogs = ["rfd"]
