[package]
name = "cypcb-render"
description = "WASM rendering bridge for CodeYourPCB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Note: cdylib will be added when building for WASM
# For now, use rlib only to avoid cdylib-specific linking issues
[lib]
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
cypcb-core = { workspace = true }
cypcb-parser = { workspace = true }
cypcb-world = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# WASM support (optional for now due to build issues)
# wasm-bindgen = { workspace = true }
# serde-wasm-bindgen = { workspace = true }
