[package]
name = "cypcb-render"
description = "WASM rendering bridge for CodeYourPCB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
cypcb-core = { workspace = true }
cypcb-parser = { workspace = true }
cypcb-world = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# WASM support
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Fix for getrandom WASM compilation (required by bevy_ecs -> ahash and uuid)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
